# CMAKE build script for DAGMC Tally

SET(CMAKE_CXX_FLAGS "-std=c++11")

SET ( PLASMA_SRC_FILES
  plasma_source.cpp
)

LIST( APPEND CODE_PUB_HEADERS "plasma_source.hpp" )


INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sources)
#${PROJECT_SOURCE_DIR}/tally/mcnp5)


# Create DAGMC Tally library
IF ( STATIC_LIB )
  ADD_LIBRARY( plasma_sources STATIC ${PLASMA_SRC_FILES} ${CODE_SRC_FILES} )
ELSE( STATIC_LIB )
  ADD_LIBRARY( plasma_sources SHARED ${PLASMA_SRC_FILES} ${CODE_SRC_FILES} )
ENDIF( STATIC_LIB )

SET_TARGET_PROPERTIES( plasma_sources PROPERTIES PUBLIC_HEADER "${CODE_PUB_HEADERS}" )

INSTALL( TARGETS    plasma_sources
  LIBRARY        DESTINATION   "${INSTALL_LIB_DIR}"
  ARCHIVE        DESTINATION   "${INSTALL_LIB_DIR}"
  PUBLIC_HEADER  DESTINATION   "${INSTALL_INCLUDE_DIR}"
  )

ADD_SUBDIRECTORY(tests)
